--- a/package.json
+++ b/package.json
@@ -22,5 +22,7 @@
         "blacklist"
     ],
     "dependencies": {
+        "node-harperdb": "^0.6.6",
+        "type-approve": "^0.2.5"
     }
 }
