--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "private": false,
-    "version": "0.0.2",
+    "version": "0.0.3",
     "name": "onguard",
-    "description": "RegExp attack-defense and IP-blacklisting for ExpressJS and HarperDB",
+    "description": "RegExp attack-defense & IP-blacklisting for ExpressJS and HarperDB",
     "author": "geekhunger <hallo@geekhunger.de>",
     "license": "MIT",
     "main": "index.js",
